--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -780,10 +780,6 @@ abline(a=0,b=1, untf = TRUE)
 abline(a=0,b=2, col = 'red', lty = 'dashed', untf = TRUE)
 
 
-
-
-
-
 # CALCULATE PROPORTIONS ABOVE 1:1 AND 2:1 LINES
 =======
 oe.ref <- cbind(pred.rf.ref.red_11, tss.cal_val$logTSS)
@@ -1194,6 +1190,85 @@ plot(x = (exp(pred.rf.red_15_val)-1), y = residuals.red_15_val,
 	  lwd=1.5,cex.lab=1.5, las = 1, font = 2, cex=1.3,
 	  axes=FALSE)
 ```
+
+```{r}
+# HUMAN INFLUENCED VARS --looking at all reference sites.
+
+# Select only the 8 human influenced predictors from the reduced model.
+tss.ref.hi <- tss.sc %>% 
+  filter(ReferenceSite == 'REFERENCE') %>% 
+  #filter(cal_val == 'CAL') %>% 
+  select(c(WDRW_LDWS,PESTIC1997WS,PCTCROP2001WS,POPDEN2010WS,PCTAGSLPMID2001WS,SW_FLUXWS,PCTIMP2001WS,RDCRSWS))
+
+# Agricultural fresh surface water withdrawl kg/sq km  
+# Want to scale back to 0.
+
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), WDRW_LDWS, main = '', ylab = "log Predicted TSS")
+abline(v= 0 , col = 'black', lty = 'dashed')
+hist(tss.ref.hi$WDRW_LDWS, main = '', xlab='WDRW_LDWS')
+
+# Mean pesticide use kg/sq km
+# Want to scale back to 0.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), PESTIC1997WS, main = '', ylab = "log Predicted TSS")
+abline(v=quantile(tss.ref.hi$PESTIC1997WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
+hist(tss.ref.hi$PESTIC1997WS, main = '', xlab = 'PESTIC1997WS')
+quantile(tss.ref.hi$PESTIC1997WS, probs = seq(.1, .9, by = .1))
+
+# Percent of WS classified as row crops.
+# Want to scale back to 0.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTCROP2001WS, main = '', ylab = "Predicted TSS")
+abline(v=quantile(tss.ref.hi$PCTCROP2001WS, probs = c(0.5)), col = c('black'),lty = 'dashed')
+hist(tss.ref.hi$PCTCROP2001WS, main = '', xlab = 'PCTCROP2001WS')
+quantile(tss.ref.hi$PCTCROP2001WS, probs = seq(.1, .9, by = .1))
+
+# Mean population density people / sq km
+# Want to scale back to 50th percentile.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), POPDEN2010WS, main = '', ylab = "log Predicted TSS", scale_x_log10())
+abline(v=quantile(tss.ref.hi$POPDEN2010WS, probs = c(0.5)), col = c('black'),lty = 'dashed')
+hist(tss.ref.hi$POPDEN2010WS, main = '', xlab = 'POPDEN2010WS')
+quantile(tss.ref.hi$POPDEN2010WS, probs = seq(.1, .9, by = .1))
+
+# Percent landcover ag dominated on >10% slope
+# Want to scale back to 0.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTAGSLPMID2001WS, main = '', ylab = "log Predicted TSS")
+abline(v=quantile(tss.ref.hi$PCTAGSLPMID2001WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
+hist(tss.ref.hi$PCTAGSLPMID2001WS, main = '', xlab = 'PCTAGSLPMID2001WS')
+quantile(tss.ref.hi$PCTAGSLPMID2001WS, probs = seq(.1, .9, by = .1))
+
+# Surface Water Nitrogen Flux
+# Scale back to 50th percent.  Partial dependence plot looks strange and is hard to explain- might consider dropping from model.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), SW_FLUXWS, main = '', ylab = "log Predicted TSS")
+abline(v=quantile(tss.ref.hi$SW_FLUXWS, probs = c(0.5)), col = c('black'),lty = 'dashed')
+hist(tss.ref.hi$SW_FLUXWS, main = '', xlab = 'SW_FLUXWS')
+quantile(tss.ref.hi$SW_FLUXWS, probs = seq(.1, .9, by = .1))
+
+# Mean imperviousness 
+# Scale back to 50th percentile.
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTIMP2001WS, main = '', ylab = "log Predicted TSS")
+abline(v=quantile(tss.ref.hi$PCTIMP2001WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
+hist(tss.ref.hi$PCTIMP2001WS, main = '', xlab = 'PCTIMP2001WS')
+quantile(tss.ref.hi$PCTIMP2001WS, probs = seq(.1, .9, by = .1))
+
+# Road and stream intersection density per sq km
+# Want to scale back to 0.
+# Experimenting with plotting only the 50th percentile vertical reference line
+quantile(tss.ref.hi$RDCRSWS, probs = seq(.1, .9, by = .1))
+
+par(mfrow=c(1,2))
+partialPlot(rf.red_15, as.data.frame(tss.cal_val), RDCRSWS, main = '', ylab = "log Predicted TSS", xlab = "RDCRSWS")
+abline(v = 0, col = 'black',lty = 'dashed')
+hist(tss.ref.hi$RDCRSWS, main = '', xlab = 'RDCRSWS', ylim = c(0,100))
+abline(v = 0.005, col = 'black',lty = 'dashed')
+```
+```
+
 #---------------------------------------------------------------------------
 
 THE ADAM L. THOMPSON MEMORIAL CODE BONEYARD
